fix: Toastify correct align-right

--- a/src/index.scss
+++ b/src/index.scss
@@ -104,7 +104,7 @@ input[type=number]::-webkit-outer-spin-button {
     &--top-right {
       @media only screen and (max-width: 480px) {
         top: 1em;
-        left: unset;
+        right: 0;
       }
     }
   }
